source/files/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emmental-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: emmental-challenges
